--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="profile.jpg" alt="Mmadubuike Tobe" class="profile-img">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p><strong>Joseph Mmadubuike Tobechukwu</strong> is a renowned software engineer and the founder and CEO of Kwechiri Technologies, a company dedicated to enhancing digital relevance for businesses. As a skilled MERN stack developer, Joseph specializes in building dynamic, responsive web applications using MongoDB, Express, React, and Node.js. His expertise extends to web development, graphics design, and tech instruction. Joseph is also the author of <em>CodeCraft</em>. A Young Programmer's Guide to Web Development. Known for his innovative solutions and technical acumen, he actively engages with the tech community, sharing insights on platforms like LinkedIn, X, Instagram and Facebook.</p>
+                    <p><strong>Joseph Mmadubuike Tobechukwu</strong> is a renowned software engineer and the founder and CEO of Kwechiri Technologies, a company dedicated to enhancing digital relevance for businesses. As a skilled MERN stack developer, Joseph specializes in building dynamic, responsive web applications using MongoDB, Express, React, and Node.js. His expertise extends to web development, graphics design, and tech instruction. Joseph is also the author of <em>CodeCraft</em>. A Young Programmer's Guide to Web Development. Known for his innovative solutions and technical acumen, he actively engages with the tech community, sharing insights on platforms like LinkedIn, Twitter, and META.</p>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Mmadubuike Tobe. All rights reserved.</p>
+            <p>&copy; 2024 Mmadubuike Joseph. All rights reserved.</p>
         </div>
     </footer>
 </body>
